// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[CheckBox Rendering] renders Checked without crashing 1`] = `
<body>
  <div>
    <label
      class="rcx-box rcx-box--full rcx-check-box"
    >
      <input
        aria-label="Decorator Label"
        checked=""
        class="rcx-box rcx-box--full rcx-check-box__input"
        type="checkbox"
      />
      <i
        aria-hidden="true"
        class="rcx-box rcx-box--full rcx-check-box__fake"
      />
    </label>
  </div>
</body>
`;

exports[`[CheckBox Rendering] renders Default without crashing 1`] = `
<body>
  <div>
    <label
      class="rcx-box rcx-box--full rcx-check-box"
    >
      <input
        aria-label="Decorator Label"
        class="rcx-box rcx-box--full rcx-check-box__input"
        type="checkbox"
      />
      <i
        aria-hidden="true"
        class="rcx-box rcx-box--full rcx-check-box__fake"
      />
    </label>
  </div>
</body>
`;

exports[`[CheckBox Rendering] renders DefaultChecked without crashing 1`] = `
<body>
  <div>
    <label
      class="rcx-box rcx-box--full rcx-check-box"
    >
      <input
        aria-label="Decorator Label"
        checked=""
        class="rcx-box rcx-box--full rcx-check-box__input"
        type="checkbox"
      />
      <i
        aria-hidden="true"
        class="rcx-box rcx-box--full rcx-check-box__fake"
      />
    </label>
  </div>
</body>
`;

exports[`[CheckBox Rendering] renders Disabled without crashing 1`] = `
<body>
  <div>
    <label
      class="rcx-box rcx-box--full rcx-check-box"
    >
      <input
        aria-label="Decorator Label"
        class="rcx-box rcx-box--full rcx-check-box__input"
        disabled=""
        type="checkbox"
      />
      <i
        aria-hidden="true"
        class="rcx-box rcx-box--full rcx-check-box__fake"
      />
    </label>
  </div>
</body>
`;

exports[`[CheckBox Rendering] renders Indeterminate without crashing 1`] = `
<body>
  <div>
    <label
      class="rcx-box rcx-box--full rcx-check-box"
    >
      <input
        aria-label="Decorator Label"
        class="rcx-box rcx-box--full rcx-check-box__input"
        type="checkbox"
      />
      <i
        aria-hidden="true"
        class="rcx-box rcx-box--full rcx-check-box__fake"
      />
    </label>
  </div>
</body>
`;

exports[`[CheckBox Rendering] renders States without crashing 1`] = `
<body>
  <div>
    <table
      class="rcx-box rcx-box--full rcx-css-1s3wr6b"
      style="border-collapse: collapse;"
    >
      <thead
        class="rcx-box rcx-box--full"
      >
        <tr
          class="rcx-box rcx-box--full"
        >
          <td
            aria-hidden="true"
            class="rcx-box rcx-box--full"
          />
          <th
            class="rcx-box rcx-box--full rcx-css-11in3rj"
          >
            checked
          </th>
          <th
            class="rcx-box rcx-box--full rcx-css-11in3rj"
          >
            unchecked
          </th>
        </tr>
      </thead>
      <tbody
        class="rcx-box rcx-box--full"
      >
        <tr
          class="rcx-box rcx-box--full"
        >
          <th
            class="rcx-box rcx-box--full rcx-css-11in3rj"
          >
            default
          </th>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <label
                class="rcx-box rcx-box--full rcx-check-box"
              >
                <input
                  aria-label="Decorator Label"
                  checked=""
                  class="rcx-box rcx-box--full rcx-check-box__input"
                  type="checkbox"
                />
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-check-box__fake"
                />
              </label>
            </div>
          </td>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <label
                class="rcx-box rcx-box--full rcx-check-box"
              >
                <input
                  aria-label="Decorator Label"
                  class="rcx-box rcx-box--full rcx-check-box__input"
                  type="checkbox"
                />
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-check-box__fake"
                />
              </label>
            </div>
          </td>
        </tr>
        <tr
          class="rcx-box rcx-box--full"
        >
          <th
            class="rcx-box rcx-box--full rcx-css-11in3rj"
          >
            hover
          </th>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <label
                class="rcx-box rcx-box--full rcx-check-box  is-hovered"
              >
                <input
                  aria-label="Decorator Label"
                  checked=""
                  class="rcx-box rcx-box--full rcx-check-box__input"
                  type="checkbox"
                />
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-check-box__fake"
                />
              </label>
            </div>
          </td>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <label
                class="rcx-box rcx-box--full rcx-check-box  is-hovered"
              >
                <input
                  aria-label="Decorator Label"
                  class="rcx-box rcx-box--full rcx-check-box__input"
                  type="checkbox"
                />
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-check-box__fake"
                />
              </label>
            </div>
          </td>
        </tr>
        <tr
          class="rcx-box rcx-box--full"
        >
          <th
            class="rcx-box rcx-box--full rcx-css-11in3rj"
          >
            active
          </th>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <label
                class="rcx-box rcx-box--full rcx-check-box  is-active"
              >
                <input
                  aria-label="Decorator Label"
                  checked=""
                  class="rcx-box rcx-box--full rcx-check-box__input"
                  type="checkbox"
                />
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-check-box__fake"
                />
              </label>
            </div>
          </td>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <label
                class="rcx-box rcx-box--full rcx-check-box  is-active"
              >
                <input
                  aria-label="Decorator Label"
                  class="rcx-box rcx-box--full rcx-check-box__input"
                  type="checkbox"
                />
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-check-box__fake"
                />
              </label>
            </div>
          </td>
        </tr>
        <tr
          class="rcx-box rcx-box--full"
        >
          <th
            class="rcx-box rcx-box--full rcx-css-11in3rj"
          >
            focus
          </th>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <label
                class="rcx-box rcx-box--full rcx-check-box  is-focused"
              >
                <input
                  aria-label="Decorator Label"
                  checked=""
                  class="rcx-box rcx-box--full rcx-check-box__input"
                  type="checkbox"
                />
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-check-box__fake"
                />
              </label>
            </div>
          </td>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <label
                class="rcx-box rcx-box--full rcx-check-box  is-focused"
              >
                <input
                  aria-label="Decorator Label"
                  class="rcx-box rcx-box--full rcx-check-box__input"
                  type="checkbox"
                />
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-check-box__fake"
                />
              </label>
            </div>
          </td>
        </tr>
        <tr
          class="rcx-box rcx-box--full"
        >
          <th
            class="rcx-box rcx-box--full rcx-css-11in3rj"
          >
            disabled
          </th>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <label
                class="rcx-box rcx-box--full rcx-check-box"
              >
                <input
                  aria-label="Decorator Label"
                  checked=""
                  class="rcx-box rcx-box--full rcx-check-box__input"
                  disabled=""
                  type="checkbox"
                />
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-check-box__fake"
                />
              </label>
            </div>
          </td>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <label
                class="rcx-box rcx-box--full rcx-check-box"
              >
                <input
                  aria-label="Decorator Label"
                  class="rcx-box rcx-box--full rcx-check-box__input"
                  disabled=""
                  type="checkbox"
                />
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-check-box__fake"
                />
              </label>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</body>
`;
